Added missing Roboto Font

--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     <title>Depth</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Staatliches&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Staatliches&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/dcc36b777a.js" crossorigin="anonymous"></script>
   </head>
   <body>
